--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.45.1",
@@ -23,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.1",
+    "react-switch": "^7.0.0",
     "react-tooltip": "^5.18.0",
     "recharts": "^2.7.2",
     "styled-components": "^6.0.2"
