--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.1",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.18.0",
